--- a/precious-metals.html
+++ b/precious-metals.html
@@ -57,15 +57,15 @@
     </header>
 
     <main>
-      <section class="hero futures-trading-hero">
+      <section class="hero precious-metals-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
               <div class="title-group">
-                <h1 class="title color--white">Futures Trading</h1>
+                <h1 class="title color--white">Precious Metals</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on Futures from around the world and explore endless trading opportunities
+                  Trade CFDs on Spot Metals and unmask new trading opportunities
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -223,7 +223,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt4.svg" alt="fxpro-mt4">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro cTrader</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -232,7 +232,7 @@
                       </div>
                     </div>
                   </div>
-  
+
                   <div class="partner-row">
                     <div class="partner-row__item -left">
                       <div class="partner-row__item__head">
@@ -240,7 +240,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-ctrader.svg" alt="fxpro-ctrader">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black">FxPro MetaTrader 4</h2>
                         <p class="text text--sm color--dark-gray">
@@ -254,7 +254,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt5.svg" alt="fxpro-mt5">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro MetaTrader 5</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -320,6 +320,21 @@
                     <h4 class="card--title text--md color--black">Forex Articles</h4>
                     <p class="card--text text--sm color--dark-gray">
                       Informative and detailed articles on various aspects of Forex trading.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="https://velmoren.github.io/bbvc/images/icons/calculator.svg" alt="calculator"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--md color--black">Forex Trading Calculators</h4>
+                    <p class="card--text text--sm color--dark-gray">
+                      Estimate your trading costs and required margins with the online calculators.
                     </p>
                   </div>
                 </div>
@@ -395,29 +410,91 @@
           <div class="row mb-20px">
             <div class="col">
               <div class="bg-block bg-block--inline bg-block--sm bg-block--orange">
-                <p class="text text--sm color--black">What is Forex?</p>
+                <p class="text text--sm color--black">Trade Metals with FxPro</p>
               </div>
             </div>
           </div>
 
           <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-lg color--white">
-                Futures are financial contracts for the specific asset to be bought or sold at a set time in the future.
-                The final price level is determined by both parties, a buyer and a seller, and is known as the forward
-                price. The specified date of the future payment is known as the expiration date.
-              </p>
-            </div>
-          </div>
+            <div class="col col-12 col-lg-6 mb-2 mb-lg-0">
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Metals have always been a popular choice among investors and traders, offering not only a way to
+                    preserve capital but also an opportunity to grow it significantly. The most traded metals are gold
+                    and silver, which are traditionally considered "safe-haven" assets during periods of economic
+                    instability.
+                  </p>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    With FxPro, you can trade not only gold and silver but also platinum, palladium, and aluminum. These
+                    metals offer traders a broad range of opportunities, and with our accurate pricing and competitive
+                    spreads, you can implement your strategies with precision and confidence.
+                  </p>
+                </div>
 
-          <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-md color--light-gray">
-                Contract for difference (CFD) on futures allow for trade on the price fluctuations of a wide range of
-                assets: commodities, indices and energy. If investors make a forecast about the quotes increase, they
-                open a Buy position on the trading platform. If they think the chart will move down, they make an online
-                order to Sell. Start trading futures with FxPro to diversify your investor account!
-              </p>
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Benefits of Trading Metals with FxPro</h5>
+                  <ul class="list-marked">
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Competitive Spreads:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        FxPro provides tight spreads on all available metals, allowing you to maximize your potential
+                        profits.
+                      </span>
+                    </li>
+
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Accurate Pricing:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Our advanced technology ensures real-time, accurate quotes for all metals.
+                      </span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-lg-6">
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <ul class="list-marked mb-3">
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Volatility and Earning Potential:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Metals like gold and silver are known for their significant price volatility, which creates
+                        opportunities for short-term and medium-term trading.
+                      </span>
+                    </li>
+
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Long-Term Stability:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Unlike other asset classes, metals retain long-term value, making them a popular choice for
+                        investors looking to safeguard their wealth.
+                      </span>
+                    </li>
+
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Safe Investment Option:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Trading metals is often seen as a reliable investment, particularly in times of economic
+                        uncertainty and market turbulence.
+                      </span>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="col col-12">
+                  <h5 class="text text--lg color--white mb-10px">Get Started with Your First Trades</h5>
+
+                  <p class="text text--extra-md color--light-gray">
+                    FxPro offers you the opportunity to practice trading metals without risk by using a free demo
+                    account. It’s the perfect way to familiarize yourself with the platform and test your strategies
+                    before transitioning to a live account. Once you're ready, you can seamlessly start trading real
+                    metals like gold, silver, palladium, platinum, and aluminum to profit from market movements.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
