--- a/shares-and-stocks.html
+++ b/shares-and-stocks.html
@@ -57,15 +57,15 @@
     </header>
 
     <main>
-      <section class="hero futures-trading-hero">
+      <section class="hero shares-and-stocks-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
               <div class="title-group">
-                <h1 class="title color--white">Futures Trading</h1>
+                <h1 class="title color--white">Shares & Stocks</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on Futures from around the world and explore endless trading opportunities
+                  Trade CFDs on thousands of global shares and benefit from ultra-fast order execution.
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -78,6 +78,28 @@
       <section>
         <div class="container">
           widget
+        </div>
+      </section>
+
+      <section class="shares">
+        <div class="container">
+          <div class="row">
+            <div class="col col-12 col-lg-10 col-xl-8">
+              <div class="title-group mb-20px">
+                <h2 class="title title--md color--white">
+                  Did you know you can sell shares without owning them?
+                </h2>
+
+                <p class="text text--md color--light-gray">
+                  At FxPro, you can not only buy shares but also sell them without having to purchase the underlying
+                  share. This is because everything we offer are CFDs, which allow you to speculate on the price
+                  movements of an instrument without physically owning the underlying asset.
+                </p>
+              </div>
+
+              <a href="#" class="btn btn--lg btn--arrow -responsive text-start ps-4">Start trading shares from the US, UK & EU</a>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -223,7 +245,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt4.svg" alt="fxpro-mt4">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro cTrader</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -232,7 +254,7 @@
                       </div>
                     </div>
                   </div>
-  
+
                   <div class="partner-row">
                     <div class="partner-row__item -left">
                       <div class="partner-row__item__head">
@@ -240,7 +262,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-ctrader.svg" alt="fxpro-ctrader">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black">FxPro MetaTrader 4</h2>
                         <p class="text text--sm color--dark-gray">
@@ -254,7 +276,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt5.svg" alt="fxpro-mt5">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro MetaTrader 5</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -320,6 +342,21 @@
                     <h4 class="card--title text--md color--black">Forex Articles</h4>
                     <p class="card--text text--sm color--dark-gray">
                       Informative and detailed articles on various aspects of Forex trading.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-xs-6 col-md-4 col-lg-3">
+              <div class="card__wrapper">
+                <div class="card">
+                  <div class="card--icon"><img src="https://velmoren.github.io/bbvc/images/icons/calculator.svg" alt="calculator"></div>
+
+                  <div class="card__content">
+                    <h4 class="card--title text--md color--black">Forex Trading Calculators</h4>
+                    <p class="card--text text--sm color--dark-gray">
+                      Estimate your trading costs and required margins with the online calculators.
                     </p>
                   </div>
                 </div>
@@ -395,29 +432,134 @@
           <div class="row mb-20px">
             <div class="col">
               <div class="bg-block bg-block--inline bg-block--sm bg-block--orange">
-                <p class="text text--sm color--black">What is Forex?</p>
+                <p class="text text--sm color--black">What Are Shares?</p>
               </div>
             </div>
           </div>
 
           <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-lg color--white">
-                Futures are financial contracts for the specific asset to be bought or sold at a set time in the future.
-                The final price level is determined by both parties, a buyer and a seller, and is known as the forward
-                price. The specified date of the future payment is known as the expiration date.
-              </p>
-            </div>
-          </div>
+            <div class="col col-12 col-lg-6 mb-2 mb-lg-0">
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">What are CFDs</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    The CFD market was developed in the early 90s, mainly to attract exchange speculators with a small
+                    capital to shares trading.
+                  </p>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Initially, it was impossible to trade stocks without registration of ownership of the given asset.
+                    Over time, to make this market more accessible, Contracts For Difference were introduced for trading
+                    financial instruments, basic goods, and other various exchange instruments.
+                  </p>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    CFD is a Contract For the Difference in prices. It’s a financial instrument that’s used to buy
+                    shares online. Stock trading is possible due to the price going up or down, which traders use to
+                    open “Buy” or speculation on the fluctuations in the prices, without the ownership of the securities
+                    themselves. Typically the price of the contract for buying shares online is not fixed and changes
+                    all the time.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    Trading CFD on shares allows traders to place both long and short positions to benefit from a price
+                    rise or fall respectively. Securities reflect corporate actions, so traders are entitled to dividend
+                    payments when going long, and incur dividend charges when going short.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    Online trading is one of the most popular methods of investment. At FxPro, we offer shares trading
+                    as CFD on the world’s most valuable companies such as Apple, Coca Cola, and Facebook.
+                  </p>
+                </div>
 
-          <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-md color--light-gray">
-                Contract for difference (CFD) on futures allow for trade on the price fluctuations of a wide range of
-                assets: commodities, indices and energy. If investors make a forecast about the quotes increase, they
-                open a Buy position on the trading platform. If they think the chart will move down, they make an online
-                order to Sell. Start trading futures with FxPro to diversify your investor account!
-              </p>
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">What you need to know about shares</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    A share is a type of security, that allows an investor to own a part of a company with the right to
+                    vote on management issues and to receive profit based on the results of the corporate work.
+                    Shares are divided into two main types.
+                  </p>
+                </div>
+
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Ordinary share</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    Securities give its owner the right to take part in management, as well as to participate in the
+                    distribution of dividends. The supreme governing body of an issuer company is the general meeting of
+                    shareholders, decisions at which are taken by voting. An owner of one share has one vote at the
+                    meeting. Naturally, the holder of 1000 shares will have much more authority than the holder of, for
+                    example, 100 papers.
+                  </p>
+                </div>
+
+                <div class="col col-12">
+                  <h5 class="text text--lg color--white mb-10px">Preferred share</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    This type of a share guarantees holders an advantage in the distribution of the corporate profits.
+                    Dividends are paid first to the holders of preferred shares, and then to the owners of ordinary
+                    ones. The same applies to the recovery of losses in an event of bankruptcy. But at the same time,
+                    owners of preferred securities are deprived of the right to vote at the shareholder meetings.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-12 col-lg-6">
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Why do companies issue shares</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    First of all, that is a tool for raising a company’s capital. These are bought with is put straight
+                    into the business for instance into the development of its production or restocking its working
+                    capital.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    Secondly, it is an important reputational component of the corporate image. This adds to its
+                    publicity and transparency and attracts potential investors interested in trading. But in order for
+                    the securities of a company to be traded on the stock exchange, they must first be listed.
+                  </p>
+                </div>
+
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">What is a listing</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    There is a series of procedures that a company needs to go through in order to include its
+                    securities into the Stock list. Each stock exchange tries to protect the interests of its investors
+                    (those who are interested in stocks trading) and therefore seeks to trade only the strongest
+                    issuers. To prove the "quality" of its securities emission, a company has to undergo a series of
+                    checks. Requirements might be made to the size of the share capital, its profitability, size of the
+                    issue, etc.
+                  </p>
+                </div>
+
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Stock price</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Each issued share has a so-called nominal value. If a physical document is produced, this value is
+                    displayed on the front of the certificate. It is calculated with a simple formula: the total size of
+                    the authorized capital of a company is divided by the number of the papers issued. But the nominal
+                    value does not reflect the real market quotes during shares trading.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    The emission value of a security is determined after it been listed on the stock exchange. Usually,
+                    it equals to or is slightly higher than the nominal value. Additionally, depending on the corporate
+                    performance, which in turn affects the interest of the investors, the market price will be
+                    determined.
+                  </p>
+                </div>
+
+                <div class="col col-12">
+                  <h5 class="text text--lg color--white mb-10px">Online trading with CFD</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Stock trading begins with research into finding a broker.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    In most developed countries, equity investments are used by people as tools to protect and increase
+                    their own savings, so these investments are widely available to anyone. Some prefer to invest money
+                    in stocks of reliable companies that show stable growth and pay dividends. Other investors prefer to
+                    buy shares online to get involved in speculation: looking for potentially undervalued securities,
+                    buying them cheap and selling them later at a higher price. But both of these investment directions
+                    take place in their country and are the driving force of the national economy.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
