--- a/cfds-on-energy.html
+++ b/cfds-on-energy.html
@@ -57,15 +57,15 @@
     </header>
 
     <main>
-      <section class="hero futures-trading-hero">
+      <section class="hero cfds-on-energy-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
               <div class="title-group">
-                <h1 class="title color--white">Futures Trading</h1>
+                <h1 class="title color--white">Precious Metals</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on Futures from around the world and explore endless trading opportunities
+                  Trade CFDs on Spot Metals and unmask new trading opportunities
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -223,7 +223,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt4.svg" alt="fxpro-mt4">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro cTrader</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -232,7 +232,7 @@
                       </div>
                     </div>
                   </div>
-  
+
                   <div class="partner-row">
                     <div class="partner-row__item -left">
                       <div class="partner-row__item__head">
@@ -240,7 +240,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-ctrader.svg" alt="fxpro-ctrader">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black">FxPro MetaTrader 4</h2>
                         <p class="text text--sm color--dark-gray">
@@ -254,7 +254,7 @@
                           <img src="https://velmoren.github.io/bbvc/images/icons/fxpro-mt5.svg" alt="fxpro-mt5">
                         </div>
                       </div>
-  
+
                       <div>
                         <h2 class="text text--lg color--black text-start text-lg-end">FxPro MetaTrader 5</h2>
                         <p class="text text--sm color--dark-gray text-start text-lg-end">
@@ -395,28 +395,18 @@
           <div class="row mb-20px">
             <div class="col">
               <div class="bg-block bg-block--inline bg-block--sm bg-block--orange">
-                <p class="text text--sm color--black">What is Forex?</p>
+                <p class="text text--sm color--black">What Are Cryptocurrency CFDs?</p>
               </div>
             </div>
           </div>
 
           <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-lg color--white">
-                Futures are financial contracts for the specific asset to be bought or sold at a set time in the future.
-                The final price level is determined by both parties, a buyer and a seller, and is known as the forward
-                price. The specified date of the future payment is known as the expiration date.
+            <div class="col col-12">
+              <p class="text text--extra-md color--light-gray mb-3">
+                Cryptocurrency CFDs are digital, decentralized financial instruments that were created to mirror the value of cryptocurrencies and work as a medium of exchange. The cryptocurrency CFD market offers traders a new way of investing, free from intermediaries such as governments or rating agencies. Hence, price movements in cryptocurrency CFDs are driven by a multitude of factors such as market demand and relevant news.
               </p>
-            </div>
-          </div>
-
-          <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-md color--light-gray">
-                Contract for difference (CFD) on futures allow for trade on the price fluctuations of a wide range of
-                assets: commodities, indices and energy. If investors make a forecast about the quotes increase, they
-                open a Buy position on the trading platform. If they think the chart will move down, they make an online
-                order to Sell. Start trading futures with FxPro to diversify your investor account!
+              <p class="text text--extra-md color--light-gray mb-3">
+                At FxPro, clients can trade cryptocurrencies as CFDs in pairs with USD. Choose your cryptocurrency CFD, go long or short and capitalise on price trend changes.
               </p>
             </div>
           </div>
